--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             ],
             "styles": [
               "src/styles.css"
-            ],
+                          ],
             "scripts": []
           },
           "configurations": {
@@ -72,7 +72,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [],
             "assets": [
